# hot_crate

./: Cargo.toml  README.md
demo/: Cargo.toml  README.md  x.json
demo/plugin_api/: Cargo.toml
demo/plugin_api/src/: lib.rs
demo/plugins/: Cargo.toml
demo/plugins/src/: lib.rs
demo/src/: main.rs
src/: lib.rs
