[package]
name = "hot_crate"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.0.7"
cargo_metadata = "0.14.1"
libloading = "0.7.3"
log = "0.4.13"
