[package]
name = "demo"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [workspace]
# members = [
#     "plugin_api",
#     "plugins",
# ]

[dependencies]
env_logger = "0.9.0"
hot_crate = { path = "../" }
plugins = { path = "plugins" }
plugin_api = { path = "plugin_api" }

